Fix image overflow

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -8,7 +8,7 @@
 
 .illustImage {
   align-self: center;
-  max-width: 400px;
+  max-width: 350px;
 }
 
 .about-info {
