--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -27,7 +27,7 @@
 }
 
 .profile-svg {
-  max-width: 500px;
+  max-width: 450px;
 }
 
 .text-container p {
